reglage de 2 bugs: soit le cropper se destabilisait quand la taille de la fenetre changait et le scale qui faisait depaser le cadre de sa zone

--- a/client/app/css/center/imgcropper.css
+++ b/client/app/css/center/imgcropper.css
@@ -1,5 +1,4 @@
-.background{
-    background-color: lightgray;
+.bound{
     width : 100%;
     min-height: 500px;
     overflow: hidden;
@@ -16,8 +15,6 @@
     cursor: pointer;
 }
 
-.slider{
-    position : absolute;
-    bottom: 0;
-    left : 35%;
+.background{
+    background-color: lightgray;
 }
